turn off debug for deployment

--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -47,7 +47,7 @@ import {
   generalUseCase,
 } from "@schemas/index";
 
-const DEBUG = true;
+const DEBUG = false;
 
 import { BookIcon } from "@spectrum-web-components/icons-workflow";
 
