--- a/src/components/general/pairing/MonsterPairs.astro
+++ b/src/components/general/pairing/MonsterPairs.astro
@@ -20,7 +20,7 @@ import {
   qualityColor,
 } from "@schemas/index";
 
-const DEBUG = true;
+const DEBUG = false;
 
 const table_name = `${Astro.url.pathname}-${ulid()}`
 
