--- a/src/pages/generals/details/[...id].astro
+++ b/src/pages/generals/details/[...id].astro
@@ -5,7 +5,7 @@ import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro';
 import General from "@components/General.astro"
 import type { InferGetStaticParamsType, InferGetStaticPropsType, GetStaticPaths } from 'astro';
 
-const DEBUG = true;
+const DEBUG = false;
 
 import { getEntry, getCollection } from "astro:content";
 
