--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -32,7 +32,6 @@ import {
   type GeneralClassType,
   GeneralElement,
   type GeneralElementType,
-  type InvestmentOptionsType,
   Note,
   type NoteType,
   Speciality,
@@ -156,7 +155,7 @@ if (dataV.success) {
     }
     await Astro.locals.enrichGeneral(Egeneral.general.name);
     delay(++iterationBreaker * 60)
-  }while(!Egeneral.status.localeCompare(ExtendedGeneralStatus.enum.complete) && iterationBreaker < 60) 
+  }while(Egeneral.status.localeCompare(ExtendedGeneralStatus.enum.complete) && iterationBreaker < 60) 
   
   const general = Egeneral!.general;
   EvAnsRank = await Astro.locals.EvAnsBuff(general.name, Display.enum.summary, {
