--- a/src/components/general/pairing/MonsterPairs.astro
+++ b/src/components/general/pairing/MonsterPairs.astro
@@ -16,8 +16,8 @@ import {
   GeneralElement,
   type GeneralElementType,
   ClassEnum,
-  type InvestmentOptionsType,
   qualityColor,
+  type BuffParamsType,
 } from "@schemas/index";
 
 const DEBUG = false;
@@ -29,16 +29,16 @@ let allGenerals = new Array<GeneralElementType>();
 let generalsPromise = false ; 
 
 //while no general can *have* both, I can evaluate generals assuming I will give them whichever that particular one needs. 
-let MyInvestmentLevel: InvestmentOptionsType = [
-  qualityColor.enum.Gold,
-  qualityColor.enum.Gold,
-  qualityColor.enum.Gold,
-  qualityColor.enum.Gold,
-  qualityColor.enum.Disabled,
-  AscendingLevels.enum[10],
-  true,
-  true,
-];
+let MyInvestmentLevel: BuffParamsType = {
+  special1: qualityColor.enum.Gold,
+  special2: qualityColor.enum.Gold,
+  special3: qualityColor.enum.Gold,
+  special4: qualityColor.enum.Gold,
+  special5: qualityColor.enum.Disabled,
+  stars: AscendingLevels.enum[10],
+  dragon: true,
+  beast: true,
+};
   
 
 const generalObjects: CollectionEntry<"generals">[] =
@@ -58,9 +58,22 @@ if (generalObjects !== null && generalObjects !== undefined) {
     }
   }
   allGeneralsJson = JSON.stringify(allGenerals);
-  allGenerals.map((g) => {
+  allGenerals.map(async(g) => {
     if (DEBUG) console.log(`adding ${g.general.name}`)
-    Astro.locals.addEG2EGS(g.general);
+    //remove this later
+    if(
+      g.general.name.includes('M') ||
+      g.general.name.includes('A')
+    ) {
+      Astro.locals.addEG2EGS(g.general);
+    }
+    await Astro.locals.enrichGeneral(g.general.name)
+    .then(() => {
+      if(DEBUG) {
+        console.log(`${g.general.name} finished enriching function`)
+      }
+    });
+    
   })
 }
 
