renable the full set of generals

--- a/src/components/general/pairing/gridRow.astro
+++ b/src/components/general/pairing/gridRow.astro
@@ -41,7 +41,7 @@ interface Props {
   InvestmentLevel: BuffParamsType;
 }
 
-const DEBUG = true;
+const DEBUG = false;
 
 const iterationLimit = 3;
 
